--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=8f6720e488b7c82adca6",
-    "/css/app.css": "/css/app.css?id=08cf3cbc4f27f1f685de"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
