--- a/.env.example
+++ b/.env.example
@@ -40,5 +40,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 STRIPE_KEY=
 STRIPE_SECRET=
+STRIPE_ENDPOINT_SECRET=
 
 MIX_STRIPE_KEY="${STRIPE_KEY}"
