--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=66f2df7a05b23b68990d",
-    "/css/app.css": "/css/app.css?id=ee31432d22feb1ea89ef"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
