--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=e6f241f18ad6bf05f723",
+    "/css/app.css": "/css/app.css?id=ad81f3acf4c5db19d320"
 }
