--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=46e4ecf8d83da0338700",
-    "/css/app.css": "/css/app.css?id=aad3851f48010921f317"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
