--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=ecb22765efbe07cd5c74",
-    "/css/app.css": "/css/app.css?id=bf0c7e0305b03d6a53ed"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
